@@ -21,9 +21,12 @@ no_index:
     - t
     - xt
 requires:
+  App::CLI: 0
   Exporter::Lite: 0
+  File::Path: 0
   JSON: 0
   LWP::Simple: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.117
+  repository: http://github.com/c9s/App-gh
+version: 0.12
