@@ -10,12 +10,16 @@ build_requires 'Test::More';
 requires 'JSON';
 # requires 'JSON::XS';
 # requires 'File::Temp';
+requires 'App::CLI';
+requires 'File::Path';
 requires 'LWP::Simple';
 requires 'Exporter::Lite';
 
 install_script 'scripts/gh';
 
 author_tests('xt');
+
+repository 'http://github.com/c9s/App-gh';
 
 auto_install;
 
